jsdir = $(pkgdatadir)/js
cssdir = $(pkgdatadir)/css
tpldir = $(pkgdatadir)/tpl

dist_js_DATA = \
	js/qetesh.js js/BindField.js js/DataObject.js js/Errors.js js/HTMLElement.js js/HTMLView.js js/ProxyFactory.js js/Validators.js js/ViewManager.js

dist_css_DATA = \
	css/qetesh.css
	
dist_tpl_DATA = \
	tpl/qmessage.html
